<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.cardanofoundation</groupId>
    <artifactId>bolnisi-aggregator</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>bolnisi-aggregator</name>
    <description>bolnisi-aggregator</description>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <properties>
        <java.version>21</java.version>
        <yaci-store.version>0.1.0-rc5</yaci-store.version>
        <version.spotless-maven-plugin>2.43.0</version.spotless-maven-plugin>

        <test.exclusions>
            **/model/**,
            **/entity/**,
            **/common/Constants.java,
        </test.exclusions>
        <sonar.coverage.exclusions>${test.exclusions}</sonar.coverage.exclusions>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
        </dependency>

        <dependency>
            <groupId>com.bloxbean.cardano</groupId>
            <artifactId>yaci-store-spring-boot-starter</artifactId>
            <version>${yaci-store.version}</version>
        </dependency>

        <dependency>
            <groupId>com.bloxbean.cardano</groupId>
            <artifactId>yaci-store-metadata-spring-boot-starter</artifactId>
            <version>${yaci-store.version}</version>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.4</version>
        </dependency>

        <dependency>
            <groupId>com.github.ipld</groupId>
            <artifactId>java-cid</artifactId>
            <version>v1.3.8</version>
        </dependency>
        <dependency>
            <groupId>com.bloxbean.cardano</groupId>
            <artifactId>cardano-client-lib</artifactId>
            <version>0.5.1</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${version.spotless-maven-plugin}</version>
                <configuration>
                    <java>
                        <excludes>
                            <exclude>target/**/*.java</exclude>
                        </excludes>
                        <replaceRegex>
                            <name>Remove wildcard imports</name>
                            <searchRegex>import\\s+[^\\*\\s]+\\*;(\\r\\n|\\r|\\n)</searchRegex>
                            <replacement>$1</replacement>
                        </replaceRegex>
                        <removeUnusedImports/>
                        <importOrder>
                            <order>
                                java|jakarta|javax,lombok,org.springframework|, ,org.junit,org.cardanofoundation,\#
                            </order>
                        </importOrder>
                        <trimTrailingWhitespace/>
                        <indent>
                            <spaces>true</spaces>
                            <spacesPerTab>2</spacesPerTab>
                        </indent>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
